--- a/index.html
+++ b/index.html
@@ -9,55 +9,55 @@
           media="screen" 
           charset="utf-8">
   </head>
-  <body>
-    <div class="aaa">
-      <img src="./eisenhower-matrix.jpg">
-      <a class="more_inf" 
+  <body class="page">
+    <div class="aaa header">
+      <img class="header__img" src="./eisenhower-matrix.jpg">
+      <a class="more_inf header__link" 
          href="https://goal-life.com/page/method/matrix-eisenhower">
          Want more details?
       </a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
-        <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
+    <div class="centered-main-page-element main">
+      <p id="topSectionForAddingElementToList" class="add-item">
+        <label for="new-task" class="section__header add-item__label">Add Item</label>
+        <div class="task-row-wrapper add-item__wrapper">
           <input id="new-task"
-                 class="task" 
+                 class="task add-item__input" 
                  type="text">
-          <button>Add</button>
+          <button class="add-item__button">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
-      <ul id="incompleteTasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text">
-          <button class="edit">Edit</button>
-          <button class="delete">
+      <h3 class="section__header">Todo</h3>
+      <ul id="incompleteTasks" class="todo">
+        <li class="todo__item">
+          <input class="todo__checkbox" type="checkbox">
+          <label class="task todo__task">Pay Bills</label>
+          <input class="todo__input" type="text">
+          <button class="edit todo__button">Edit</button>
+          <button class="delete todo__button">
             <img src="./remove.svg">
           </button>
         </li>
-        <li class="editMode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
+        <li class="editMode todo__item">
+          <input class="todo__checkbox" type="checkbox">
+          <label class="task todo__task">Go Shopping</label>
           <input type="text" 
                  value="Go Shopping" 
-                 class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
+                 class="task todo__input">
+          <button class="edit todo__button">Save</button>
+          <button class="delete todo__button">
             <img src="./remove.svg">
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
+      <h3 class="section__header">Completed</h3>
+      <ul id="completed-tasks" class="todo">
+        <li class="todo__item">
+          <input class="todo__checkbox" type="checkbox" checked>
+          <label class="task todo__task">See the Doctor</label>
+          <input type="text" class="task todo__input">
+          <button class="edit todo__button">Edit</button>
+          <button class="delete todo__button">
             <img src="./remove.svg">
           </button>
         </li>
