refactor: add input and button classes according to rules 3.2 and 3.3 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -22,30 +22,30 @@
         <label for="new-task" class="section__header add-item__label">Add Item</label>
         <div class="task-row-wrapper add-item__wrapper">
           <input id="new-task"
-                 class="task add-item__input" 
+                 class="task input add-item__input" 
                  type="text">
-          <button class="add-item__button">Add</button>
+          <button class="button add-item__button">Add</button>
         </div>
       </p>
       <h3 class="section__header">Todo</h3>
       <ul id="incompleteTasks" class="todo">
         <li class="todo__item">
-          <input class="todo__checkbox" type="checkbox">
+          <input class="input todo__checkbox" type="checkbox">
           <label class="task todo__task">Pay Bills</label>
-          <input class="todo__input" type="text">
-          <button class="edit todo__button">Edit</button>
-          <button class="delete todo__button">
+          <input class="input todo__input" type="text">
+          <button class="edit button todo__button">Edit</button>
+          <button class="delete button todo__button">
             <img src="./remove.svg">
           </button>
         </li>
         <li class="editMode todo__item">
-          <input class="todo__checkbox" type="checkbox">
+          <input class="input todo__checkbox" type="checkbox">
           <label class="task todo__task">Go Shopping</label>
           <input type="text" 
                  value="Go Shopping" 
-                 class="task todo__input">
-          <button class="edit todo__button">Save</button>
-          <button class="delete todo__button">
+                 class="task input todo__input">
+          <button class="edit button todo__button">Save</button>
+          <button class="delete button todo__button">
             <img src="./remove.svg">
           </button>
         </li>
@@ -53,11 +53,11 @@
       <h3 class="section__header">Completed</h3>
       <ul id="completed-tasks" class="todo">
         <li class="todo__item">
-          <input class="todo__checkbox" type="checkbox" checked>
+          <input class="input todo__checkbox" type="checkbox" checked>
           <label class="task todo__task">See the Doctor</label>
-          <input type="text" class="task todo__input">
-          <button class="edit todo__button">Edit</button>
-          <button class="delete todo__button">
+          <input type="text" class="task input todo__input">
+          <button class="edit button todo__button">Edit</button>
+          <button class="delete button todo__button">
             <img src="./remove.svg">
           </button>
         </li>
