refactor: remove extra id, rename id according to rules 3.2 and 3.3 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
       </a>
     </div>
     <div class="centered-main-page-element main">
-      <p id="topSectionForAddingElementToList" class="add-item">
-        <label for="new-task" class="section__header add-item__label">Add Item</label>
+      <p class="add-item">
+        <label for="add-item__input" class="section__header add-item__label">Add Item</label>
         <div class="task-row-wrapper add-item__wrapper">
-          <input id="new-task"
+          <input id="add-item__input"
                  class="task input add-item__input" 
                  type="text">
           <button class="button add-item__button">Add</button>
         </div>
       </p>
       <h3 class="section__header">Todo</h3>
-      <ul id="incompleteTasks" class="todo">
+      <ul id="uncompleted-tasks" class="todo">
         <li class="todo__item">
           <input class="input todo__checkbox" type="checkbox">
           <label class="task todo__task">Pay Bills</label>
