--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <ul id="uncompleted-tasks" class="todo">
         <li class="todo__item">
           <input class="input todo__checkbox" type="checkbox">
-          <label class="label-elem todo__label todo__task task">Pay Bills</label>
+          <label class="label-elem todo__label todo__task">Pay Bills</label>
           <input class="input input_text todo__input" type="text">
           <button class="button todo__button todo__button_edit">Edit</button>
           <button class="button todo__button todo__button_delete">
@@ -40,10 +40,10 @@
         </li>
         <li class="todo__item todo__item_edit">
           <input class="input todo__checkbox" type="checkbox">
-          <label class="label-elem todo__label todo__task task">Go Shopping</label>
+          <label class="label-elem todo__label todo__task">Go Shopping</label>
           <input type="text" 
                  value="Go Shopping" 
-                 class="input input_text todo__input todo__task task">
+                 class="input input_text todo__input todo__task">
           <button class="button todo__button todo__button_edit">Save</button>
           <button class="button todo__button todo__button_delete">
             <img class="button__icon_delete" src="./remove.svg">
@@ -54,8 +54,8 @@
       <ul id="completed-tasks" class="todo">
         <li class="todo__item todo__item_compl">
           <input class="input todo__checkbox" type="checkbox" checked>
-          <label class="label-elem todo__label todo__task task">See the Doctor</label>
-          <input type="text" class="input input_text todo__input todo__task task">
+          <label class="label-elem todo__label todo__task">See the Doctor</label>
+          <input type="text" class="input input_text todo__input todo__task">
           <button class="button todo__button todo__button_edit">Edit</button>
           <button class="button todo__button todo__button_delete">
             <img class="button__icon_delete" src="./remove.svg">
