refactor: add alternative content for multimedia according to rule 1.2 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body class="page">
     <header class="header">
-      <img class="header__img" src="./eisenhower-matrix.jpg">
+      <img class="header__img" src="./eisenhower-matrix.jpg" alt="The Eisenhower matrix">
       <a class="more_inf header__link" 
          href="https://goal-life.com/page/method/matrix-eisenhower">
          Want more details?
@@ -36,7 +36,7 @@
             <input class="input input_text todo__input" type="text">
             <button class="button todo__button todo__button_edit">Edit</button>
             <button class="button todo__button todo__button_delete">
-              <img class="button__icon_delete" src="./remove.svg">
+              <img class="button__icon_delete" src="./remove.svg" alt="delete button">
             </button>
           </li>
           <li class="todo__item todo__item_edit">
@@ -47,7 +47,7 @@
                   class="input input_text todo__input todo__task">
             <button class="button todo__button todo__button_edit">Save</button>
             <button class="button todo__button todo__button_delete">
-              <img class="button__icon_delete" src="./remove.svg">
+              <img class="button__icon_delete" src="./remove.svg" alt="delete button">
             </button>
           </li>
         </ul>
@@ -61,7 +61,7 @@
             <input type="text" class="input input_text todo__input todo__task">
             <button class="button todo__button todo__button_edit">Edit</button>
             <button class="button todo__button todo__button_delete">
-              <img class="button__icon_delete" src="./remove.svg">
+              <img class="button__icon_delete" src="./remove.svg" alt="delete button">
             </button>
           </li>
         </ul>
