refactor: split long lines into multiple according to rule 2.5 in html-and-css.md

--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
   </head>
   <body class="page">
     <header class="header">
-      <img class="header__img" src="./eisenhower-matrix.jpg" alt="The Eisenhower matrix">
+      <img class="header__img" 
+           src="./eisenhower-matrix.jpg" 
+           alt="The Eisenhower matrix">
       <a class="more_inf header__link" 
          href="https://goal-life.com/page/method/matrix-eisenhower">
-         Want more details?
+        Want more details?
       </a>
     </header>
     <main class="main">
       <section class="add-item">
-        <label for="add-item__input" class="label-elem section__header add-item__label">Add Item</label>
+        <label for="add-item__input" 
+               class="label-elem section__header add-item__label">
+          Add Item
+        </label>
         <div class="add-item__wrapper">
           <input id="add-item__input"
                  class="input input_text add-item__input todo__task" 
@@ -43,8 +48,8 @@
             <input class="input todo__checkbox" type="checkbox">
             <label class="label-elem todo__label todo__task">Go Shopping</label>
             <input type="text" 
-                  value="Go Shopping" 
-                  class="input input_text todo__input todo__task">
+                   value="Go Shopping" 
+                   class="input input_text todo__input todo__task">
             <button class="button todo__button todo__button_edit">Save</button>
             <button class="button todo__button todo__button_delete">
               <img class="button__icon_delete" src="./remove.svg" alt="delete button">
