--- a/index.html
+++ b/index.html
@@ -72,6 +72,6 @@
         </ul>
       </section>
     </main>
-   <script SRC="app.js"></script>
+   <script src="app.js"></script>
   </body>
 </html>
